--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,5 @@
 discord~=1.7.3
 aiohttp~=3.7.4.post0
-sqlite3
 Pillow~=8.2.0
 youtube_dl
 setuptools~=56.0.0
@@ -9,3 +8,6 @@ pymongo[srv]>=3.12.0
 psycopg2~=2.9.1
 spotipy~=2.18.0
 spotify_dl
+aiosqlite>=0.17.0
+motor>=2.5.0
+aiopg>=1.3.1
