--- a/requirements.txt
+++ b/requirements.txt
@@ -7,7 +7,7 @@ requests~=2.25.1
 pymongo[srv]>=3.12.0
 psycopg2~=2.9.1
 spotipy~=2.18.0
-spotify_dl
+spotify_dl~=2.5
 aiosqlite>=0.17.0
 motor>=2.5.0
 aiopg>=1.3.1
