--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -3,3 +3,4 @@ include LICENSE
 include requirements.txt
 include discordSuperUtils/*
 include discordSuperUtils/assets/*
+include discordSuperUtils/Interactions/*
