--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -4,3 +4,4 @@ include requirements.txt
 include discordSuperUtils/*
 include discordSuperUtils/assets/*
 include discordSuperUtils/music/*
+include discordSuperUtils/music/lavalink/*
