--- a/requirements.txt
+++ b/requirements.txt
@@ -5,8 +5,9 @@ requests~=2.25.1
 spotipy~=2.16.1
 aiosqlite>=0.17.0
 motor>=2.5.0
-aiopg>=1.3.1
 aiomysql~=0.0.21
 discord_components
 pytz>=2021.1
 wavelink==1.0.0b30
+setuptools~=57.0.0
+aiopg~=1.3.1
