--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
 discord~=1.7.3
-aiohttp~=3.7.4.post0
+aiohttp>=3.6.3
 Pillow>=8.3.0
 requests~=2.25.1
 spotipy~=2.16.1
@@ -9,5 +9,6 @@ aiomysql~=0.0.21
 discord_components
 pytz>=2021.1
 wavelink==1.0.0b30
-setuptools~=57.0.0
+setuptools>=56.0.0
 aiopg~=1.3.1
+youtube_dl>=2020.9.27
